# fast_zero

./: .coverage  .env  app.py  database.py  pyproject.toml  security.py
migrations/: env.py
migrations/versions/: 5dfde6884ff1_create_users_table.py
routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_users.py
